# abstack

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  vcpkg.json
.github/workflows/: ci.yml
docs/: cli-cookbook.md  cli-guide.md  cli-reference.md  examples.md  grammar.md  language-guide.md  spec.md  stdlib.md  tooling.md
docs/releases/: v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md
include/abstack/: ast.hxx
include/abstack/codegen/: compose_emitter.hxx  dockerfile_emitter.hxx
include/abstack/format/: formatter.hxx
include/abstack/frontend/: lexer.hxx  parser.hxx  token.hxx
include/abstack/ir/: lowering.hxx  model.hxx
include/abstack/semantic/: validator.hxx
include/abstack/stdlib/: library.hxx
samples/: microservices.abs  multi_use.abs  quickstart.abs  stdlib_stack.abs  unified.abs
src/: ast.hxx  lexel.hxx  lexer.cxx  main.cpp  main.cxx  parser.cxx  parser.hxx  semantic.cxx  semantic.hxx  token.hxx
src/cli/: main.cxx
src/codegen/: compose_emitter.cxx  dockerfile_emitter.cxx
src/format/: formatter.cxx
src/frontend/: lexer.cxx  parser.cxx  token.cxx
src/ir/: lowering.cxx
src/semantic/: validator.cxx
src/stdlib/: library.cxx
tests/: pipeline_test.cxx
